refactoring по мелочи.