@@ -5,6 +5,7 @@ import web.model.Car;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CarServiceImp implements CarService {
@@ -21,6 +22,6 @@ public class CarServiceImp implements CarService {
 
     @Override
     public List<Car> showCars(int value) {
-        return cars.stream().limit(value).toList();
+        return cars.stream().limit(value).collect(Collectors.toList());
     }
 }
